--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-input[type=text], select {
+.inputText {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -8,27 +8,53 @@ input[type=text], select {
   box-sizing: border-box;
 }
 
-button[type=submit] {
-    width: 100%;
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
+.addParticipant{
+  margin-top: 1%;
+  text-align: center;
+}
 
-button[type=button] {
-    width: 100%;
+.inputEvents {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.eventInput{
+
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  padding: 4px 6px;
+}
+
+.buttonEvent {
+    width: 420px;
     background-color: rgb(41, 31, 172);
     color: white;
-    padding: 14px 20px;
+    padding: 10px 20px;
     margin: 8px 0;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-  }
+}
+
+.buttonEvent1 {
+  background-color: rgb(41, 31, 172);
+  color: white;
+  padding: 4px 10px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.eventTable {
+  align-items: center
+}
+
   ul {
     list-style-type: none;
     margin: 0;
@@ -54,12 +80,6 @@ button[type=button] {
     background-color: #111;
   }
 
-  table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-    background-color: #f1f1c1;
-  }
-
   .bg {
     background-image:url(facility.jpg);
 
@@ -70,9 +90,67 @@ button[type=button] {
 
 
   .greyborder{
-    width: 60%;
-    height: 15%;
-    background-color: #f1f1c1;
-    color: black !important;
+    width: 100%;
+    background-color: #707070;
     margin-bottom: 5%;
+  }
+
+.niceTable{
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  border: 1px solid #ddd;
+  padding: 8px;
+
+  }
+  
+  .table{
+    border-collapse: collapse;
+    width: 100%;
+  }
+
+  .tableEvent{
+    border-collapse: collapse;
+    width: 420px;
+  }
+  
+  .tableParticipants{
+    border-collapse: collapse;
+    width: 60%;
+    margin-top: 3%;
+  }
+  
+  th, td {
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even){background-color: #c9c8c8}
+  tr:nth-child(odd){background-color: #a19f9f}
+  
+  th {
+    background-color: #4CAF50;
+    color: white;
+  }
+
+  .niceButton {
+    background-color: rgb(90, 90, 90);
+    color: white;
+    padding: 8px 30px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  .niceButton1 {
+    background-color: rgb(89, 0, 255);
+    color: white;
+    padding: 8px 30px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    align-self: flex-start;
+    margin-left: 2%;
   }
