--- a/public/css/index.css
+++ b/public/css/index.css
@@ -168,3 +168,66 @@
     display: flex;
     flex-direction: column;
   }
+
+  .loading {
+    animation-name: loading;
+    animation-iteration-count: infinite;
+    animation-duration: 4s;
+  }
+
+  @keyframes loading {
+    
+    7% {
+      transform: translateX(25%);
+    }
+    14%{ 
+      transform: translate(25%, 25%);
+    }
+
+    21% {
+      transform: translate(-25%, 25%);
+    }
+
+    28% {
+      transform: translate(-25%, -25%);
+    }
+    35% {
+      transform: translate(25%, -25%);
+    }
+
+    42% {
+      transform: translate(25%, 0);
+    }
+
+    49% {
+      transform: translate(0, 0);
+    }
+
+    56% {
+      transform: translate(-25%, 0);
+    }
+
+    63% {
+      transform: translate(-25%, -25%);
+    }
+
+    70% {
+      transform: translate(25%, -25%);
+    }
+
+    77% {
+      transform: translate(25%, 25%);
+    }
+    
+    84% {
+      transform: translate(-25%, 25%);
+    }
+
+    91% {
+      transform: translate(-25%, 0);
+    }
+
+    98% {
+      transform: translate(0, 0);
+    }
+  }
